# CICD-Docker-to-HuggingFace-Template

./: .gitignore  Dockerfile  Dockerfile.gradio  Dockerfile.streamlit  README.md  app.py  gradio_app.py  pyproject.toml
.github/workflows/: ci_cd.yml  ci_cd_gradio.yml  ci_cd_pipeline.yml  ci_cd_streamlit.yml
scripts/: push_gradio_hf_space.py  push_hf_space.py  push_streamlit_hf_space.py
src/frontend/: layout.py
src/frontend/layouts/: __init__.py  page0.py
